--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=EmployeeManagement
 server.port=8000
 spring.datasource.username=root
-spring.datasource.password=Password@123
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://instancedb:3306/emssystem?createDatabaseIfNotExist=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
