--- a/EmployeeManagement/Dockerfile
+++ b/EmployeeManagement/Dockerfile
@@ -1,6 +1,4 @@
 FROM openjdk:11
 EXPOSE 8000
-MAINTAINER "SUNDHAR"
-COPY target/employee.jar usr/app/
-WORKDIR usr/app/
-ENTRYPOINT ["java", "-jar", "employee.jar"]
+COPY target/employeeapp.jar employeeapp.jar
+ENTRYPOINT ["java","-jar","/employeeapp.jar"]
